--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
     "name": "@realdem/react-log-driver",
-    "version": "2023.1.1.0",
+    "version": "0.5.4",
     "private": false,
     "license": "MIT",
     "description": "A react hook to log data from any component and upload periodically to your server",
@@ -19,8 +19,8 @@
     },
     "main": "react-log-driver.js",
     "dependencies": {
-        "react": "^18.2.0",
-        "react-query": "^3.39.3",
+        "react": "^18.3.1",
+        "@tanstack/react-query": "^5.40.0",
         "recoil": "^0.7.7"
     },
     "browserslist": {
