--- a/package.json
+++ b/package.json
@@ -18,10 +18,14 @@
         "url": "https://danmichael.pro"
     },
     "main": "react-log-driver.js",
+    "scripts": {
+        "build": "echo 'No build step required - library is already built'",
+        "test": "echo 'No tests configured yet'"
+    },
     "dependencies": {
-        "react": "^18.3.1",
-        "@tanstack/react-query": "^5.40.1",
-        "recoil": "^0.7.7"
+        "@tanstack/react-query": "^5.81.5",
+        "jotai": "^2.12.5",
+        "react": "^19.1.0"
     },
     "browserslist": {
         "production": [
